# Encoda

./: CMakeLists.txt  README.md
include/encoding/: encoding.h
src/: convert.cpp  platform_convert.cpp  unicode.h  utf_convert.cpp
test/: test_main.cpp
